# RE2RRandomizer

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: BuildAndPublish.yml  ManualReleaseMain.yml
build-tidy/.cmake/api/v1/reply/: cache-v2-e50aea2e2c90f52559e7.json  cmakeFiles-v1-2e26ec75eb0d07716955.json  codemodel-v2-1e49ed57c03b9751d58f.json  directory-_deps.minhook-build-c6746a883cd4865650d9.json  directory-src.App-c1cac64c38221cac1689.json  directory-src.Common-8e3860fa5a32efc09757.json  directory-src.Database-99172e7085cb18de2f24.json  directory-src.Hook-bf67a5380ceee6a83369.json  directory-src.Types-2abae6f4568f8e5c45e7.json  index-2025-03-03T06-39-34-0406.json  target-RE2RR_App-c8831deaa46f909f1473.json  target-RE2RR_Common-76854ac938cc0e91eae2.json  target-RE2RR_Database-2700801f90444cba9e87.json  target-RE2RR_Hook-017c84f9432632b0e90e.json  target-RE2RR_Types-e141f913f712b2feb00e.json  target-minhook-a4d91b980459a78b5afb.json  target-tidy-0629d7da2fcd6cee8714.json  target-tidy-fix-ce7fa65b3ca5cfaf3c57.json  toolchains-v1-b1af7b05d0a00e5cd446.json
build-tidy/src/App/: VersionInfoApp.rc
build-tidy/src/Common/: VersionInfoCommon.rc
build-tidy/src/Database/: VersionInfoDatabase.rc
build-tidy/src/Hook/: VersionInfoHook.rc
build-tidy/src/Types/: VersionInfoTypes.rc
cmake/: ClangTidy.cmake  ProjectSettings.cmake  SetProjectCompileDefinitions.cmake  SetProjectCompileOptions.cmake  SetProjectLinkOptions.cmake
include/: Common.h  DX11Hook.h  Database.h  DllHook.h  ExeInjector.h  File.h  Hashes.h  Hooking.h  ImGUIConfig.h  Logging.h  Memory.h  Process.h  RE2RRLogic.h  RE2RRSeedGen.h  RE2RRSeedShuffler.h  RE2RRTypes.h  RE2RRUI.h  RE2RRandomizer.h  RE2RRandomizerHook.h  Randomizer.h  SeedGenerator.h  SeedShuffler.h  Strings.h  Types.h  Types_Enum.h  UI.h
src/: Database.cpp  DllHook.cpp  ExeInjector.cpp  File.cpp  Hashes.cpp  Hooking.cpp  Memory.cpp  Process.cpp  RE2RRLogic.cpp  RE2RRSeedGen.cpp  RE2RRSeedShuffler.cpp  RE2RRUI.cpp  RE2RRandomizer.cpp  RE2RRandomizerHook.cpp  Randomizer.cpp  Randomizer_GetItemByGameModeKeyAndGUID.cpp  Randomizer_GetItemByItemMapKey.cpp  Randomizer_ItemDependencies.cpp  Randomizer_Locations.cpp  Randomizer_OriginalItemMapping.cpp  Randomizer_ZoneItemDependencies.cpp  SeedGenerator.cpp  SeedShuffler.cpp  Strings.cpp  Types.cpp  Types_Enum.cpp  UI.cpp  VersionInfo.rc.in
src/App/: CMakeLists.txt  ExeInjector.cpp
src/App/include/: ExeInjector.h
src/Common/: CMakeLists.txt  Collections.cpp  Common.cpp  File.cpp  Logging.cpp  Memory.cpp  Process.cpp  Strings.cpp
src/Common/include/: Collections.h  Common.h  File.h  Guid.h  Logging.h  Memory.h  Process.h  Strings.h
src/Database/: CMakeLists.txt  Database.cpp
src/Database/include/: Database.h
src/Hook/: CMakeLists.txt  Database.cpp  DllHook.cpp  DllMain.cpp  GameHook.cpp  Hashes.cpp  Randomizer.cpp  Types.cpp  UI.cpp
src/Hook/include/: Database.h  DllHook.h  DllMain.h  GameHook.h  Hashes.h  Hooking.h  Memory.h  Randomizer.h  Types.h  UI.h
src/Types/: CMakeLists.txt  Types.cpp  Types_Enum.cpp
src/Types/include/: Types.h  Types_Enum.h
tests/: test_Strings.cpp
toolchains/: clang-toolchain.cmake
vcpkg/triplets/: x64-mingw-dynamic-custom.cmake  x64-mingw-static-custom.cmake
